# tensorport

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  END_TO_END_TEST_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  FP4_INFERENCE_GUIDE.md  IMPLEMENTATION_COMPLETE.md  MODAL_README.md  PROJECT_STATUS.md  README.md  analyze_results.py  benchmark_flax_gpt2.py  benchmark_prompts.json  benchmark_report_arm64_neoverse_n1_8cores.md  benchmark_results.json  benchmark_results_arm64_neoverse_n1.json  complete_inference_engine.py  convert_and_test_gpt_oss_20b.ipynb  demo_flax_gpt2.py  download_gpt_oss_20b.ipynb  end_to_end_demo.py  end_to_end_test.py  flax_gpt2_model.py  flax_gptoss_model.py  gptoss_inference.py  gptoss_loader.py  gptoss_model.py  gptoss_validator.py  integration_test.py  jax_model_loader.py  load_and_test.py  modal_benchmark.py  modal_benchmark_mxfp4.py  modal_fp4_native.py  modal_setup.py  pytorch_to_flax_converter.py  quick_demo_test.py  run_comprehensive_benchmark.py  (+11 more)
.github/: copilot-instructions.md
demo_test/: demo_report.md  demo_results.json
demo_test/converted-model/: load_numpy_jax.py  manifest.json
demo_test/demo-model/: config.json  model.safetensors.index.json
jax-mxfp4/: README.md  pyproject.toml
jax-mxfp4/jax_mxfp4/: __init__.py  kernels.py  layers.py  quantize.py
jax-mxfp4/jax_mxfp4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: msgpack_to_jax.py
src/: converter.rs  error.rs  lib.rs  main.rs  shard.rs  tensor.rs  verify.rs
src/formats/: jax.rs  jax_pickle.rs  jax_pytree.rs  mod.rs  msgpack_shards.rs  numpy_arrays.rs  numpy_direct.rs  safetensors.rs
test-conversion/: manifest.json
test-synthetic/: config.json  model.safetensors.index.json
