[package]
name = "tensorport"
version = "0.1.0"
edition = "2021"
authors = ["Atsentia Team"]
description = "Fast, memory-efficient conversion from safetensors to JAX-compatible formats with custom bfloat16 support"
license = "MIT"
repository = "https://github.com/atsentia/tensorport"
keywords = ["tensor", "safetensors", "jax", "bfloat16", "conversion"]
categories = ["science", "command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
memmap2 = "0.9"
indicatif = "0.17"
rayon = "1.8"
byteorder = "1.5"
rmp-serde = "1.1"
half = "2.3"
env_logger = "0.10"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
assert_approx_eq = "1.1"

[[bin]]
name = "tensorport"
path = "src/main.rs"

# [[bench]]
# name = "conversion_bench"
# harness = false